objects/SFMC__mdt/SFMC__mdt.object-meta.xml
<CustomObject>
    <label>SFMC</label>
    <pluralLabel>SFMC</pluralLabel>
</CustomObject>