objects/SFMC__mdt/fields/All_Bounces_External_Key__c.field-meta.xml
<CustomField>
    <fullName>All_Bounces_External_Key__c</fullName>
    <label>All Bounces External Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>