objects/SFMC__mdt/fields/All_Opens_External_Key__c.field-meta.xml
<CustomField>
    <fullName>All_Opens_External_Key__c</fullName>
    <label>All Opens External Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>