objects/SFMC__mdt/fields/Delta_Bounces_External_Key__c.field-meta.xml
<CustomField>
    <fullName>Delta_Bounces_External_Key__c</fullName>
    <label>Delta Bounces External Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>