objects/SFMC__mdt/fields/Delta_Clicks_External_Key__c.field-meta.xml
<CustomField>
    <fullName>Delta_Clicks_External_Key__c</fullName>
    <label>Delta Clicks External Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>