objects/SFMC__mdt/fields/Rest_Endpoint_Base__c.field-meta.xml
<CustomField>
    <fullName>Rest_Endpoint_Base__c</fullName>
    <label>Rest Endpoint Base</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>